--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2",
     "handyscript": "^1.9.0-production",
     "localforage": "^1.10.0",
     "lucide-react": "^0.343.0",
