--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "lucide-react": "^0.343.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-aria": "^3.33.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "react-stately": "^3.31.1",
     "sort-by": "^0.0.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
