feat: Update package dependencies
This commit adds the "@emailjs/browser" package as a dependency with version "^4.3.3" in both the package.json and package-lock.json files. This update ensures that the latest version of the package is used in the project.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@g-loot/react-tournament-brackets": "^1.0.31-rc",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
